# RealEstateScraper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sh  migrate_db.sh  requirements.txt  requirements_dev.txt  reset_db.sh  setup.cfg
.github/workflows/: tests.yml
frontend/: .eslintrc.js  craco.config.js  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/pages/: ApartmentDetails.tsx  DataLoads.tsx  LandDetails.tsx  LoadConfig.tsx
frontend/src/requests/: axios.ts  data_manager.ts  helper.ts  xe_properties.ts  xe_results.ts
frontend/src/table/: ApartmentTable.tsx  DataLoadsTable.tsx  LandTable.tsx  LoadConfigTable.tsx  PropertiesTable.tsx  tableHelper.tsx
frontend/src/tabs/: AddLoadConfig.tsx  Details.tsx  Properties.tsx  Tabs.module.css
src/: manage.py  run.py
src/backend/: settings.py  urls.py
src/data_manager/: models.py  serializers.py  urls.py  views.py
src/data_manager/jobs/: sample.py
src/data_manager/jobs/hourly/: scrape.py
src/data_manager/migrations/: 0001_initial.py
src/housing_data/: apps.py
src/properties/: admin.py  models.py  serializers.py  urls.py  views.py
src/properties/migrations/: 0001_initial.py  0002_alter_owner_account_id.py
src/properties/templates/: help.html  openapi.html
src/scraping/: dates.py  scrape.py  webpage.py  xe.py
tests/: test_webPage.py  test_xe.py
tests/integration/: test_xe.py
