[metadata]
name = realestate
description = srape real estate prices from the web
author = Ioanna Arpoglou & Bastian Hoeltkemeier
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    scraping
    backend
    properties
install_requires =
    beautifulsoup4 >= 4.10
    requests >= 2.20
    types-requests>=2.20
    Django>=4.0
    django-debug-toolbar>=3.2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160